--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-clock": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-hook": "^0.0.1",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-simple-clock": "^1.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
