--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook": "^0.0.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
-    "react-simple-clock": "^1.1.3"
+    "react-simple-clock": "^1.1.3",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
